[package]
name = "userscripts-cf-proxy"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker proxy for accessing private GitHub raw files."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/udmada/userscripts-cf-proxy"
homepage = "https://github.com/udmada/userscripts-cf-proxy"
keywords = ["cloudflare", "workers", "github", "proxy"]

[lib]
crate-type = ["cdylib"]

[dependencies]
urlencoding = "2.1.3"
worker = { version = "0.7.2", features = ["http"] }
